classDiagram
    direction LR

%% ── Accounts ─────────────────────────────────

    class UserRole {
        +id: int [PK]
        +code: String
        +createdAt: Timestamp
        +updatedAt: Timestamp
    }

    class User {
        +id: int [PK]
        +email: String
        +passwordHash: String
        +roleId: int [FK]
        +createdAt: Timestamp
        +updatedAt: Timestamp
    }

    class Donor {
        +id: int [PK]
        +userId: int [FK, UNIQUE]
        +name: String
        +createdAt: Timestamp
        +updatedAt: Timestamp
    }

    class Organization {
        +id: int [PK]
        +userId: int [FK, UNIQUE]
        +name: String
        +krs: String [UNIQUE]
        +categoryId: int [FK]
        +phoneNumber: String
        +createdAt: Timestamp
        +updatedAt: Timestamp
    }

%% ── Organization Data ────────────────────────

    class OrganizationCategory {
        +id: int [PK]
        +name: String
        +createdAt: Timestamp
        +updatedAt: Timestamp
    }

    class Address {
        +id: int [PK]
        +organizationId?: int [FK]
        +city: String
        +street: String
        +building: String
        +apartment?: String
        +zipCode: String
        +createdAt: Timestamp
        +updatedAt: Timestamp
    }

%% ── Needs ────────────────────────────────────

    class NeedCategory {
        +id: int [PK]
        +name: String
        +createdAt: Timestamp
        +updatedAt: Timestamp
    }

    class NeedStatus {
        +id: int [PK]
        +code: String
        +createdAt: Timestamp
        +updatedAt: Timestamp
    }

    class NeedType {
        +id: int [PK]
        +code: String
        +createdAt: Timestamp
        +updatedAt: Timestamp
    }

    class Need {
        +id: int [PK]
        +description: String
        +price: Number
        +organizationId: int [FK]
        +donee: String
        +item: String
        +addressId: int [FK]
        +expiry: Date
        +photo?: String
        +statusId: int [FK]
        +categoryId: int [FK]
        +typeId: int [FK]
        +important: boolean
        +createdAt: Timestamp
        +updatedAt: Timestamp
    }

    class NeedStatusHistory {
        +id: int [PK]
        +needId: int [FK]
        +statusId: int [FK]
        +changedById: int [FK]
        +createdAt: Timestamp
    }

%% ── Donations ────────────────────────────────

    class DonationStatus {
        +id: int [PK]
        +code: String
        +createdAt: Timestamp
        +updatedAt: Timestamp
    }

    class Donation {
        +id: int [PK]
        +donorId: int [FK]
        +needId: int [FK]
        +statusId: int [FK]
        +bookedAt: Timestamp
        +fulfilledAt?: Timestamp
        +updatedAt: Timestamp
    }

    class DonorFavouriteNeed {
        +donorId: int [PK, FK]
        +needId: int [PK, FK]
        +createdAt: Timestamp
    }

%% ── Relations ────────────────────────────────

    UserRole "1" --> "0..*" User : role
    User "1" --> "0..1" Donor : donor
    User "1" --> "0..1" Organization : organization
    User "1" --> "0..*" NeedStatusHistory : changedBy

    OrganizationCategory "1" --> "0..*" Organization : category
    Organization "1" --> "0..*" Address : addresses
    Organization "1" --> "0..*" Need : needs

    Address "1" --> "0..*" Need : address
    NeedCategory "1" --> "0..*" Need : category
    NeedStatus "1" --> "0..*" Need : currentStatus
    NeedType "1" --> "0..*" Need : type

    Need "1" --> "0..*" NeedStatusHistory : statusHistory
    NeedStatus "1" --> "0..*" NeedStatusHistory : historyStatus

    Donor "1" --> "0..*" Donation : donations
    Need "1" --> "0..*" Donation : donations
    DonationStatus "1" --> "0..*" Donation : status

    Donor "1" --> "0..*" DonorFavouriteNeed : favourites
    Need "1" --> "0..*" DonorFavouriteNeed : favouritedBy
